my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAFTER/EAFTER.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTER.dml:13:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTER.dml:17:5: error EAFTER: illegal 'after' statement bound to hook 'h' with callback method 'm': every method input parameter not receiving a message component must be of serializable type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTER.dml:11:7: method declaration
method parameter 'i' is of unserializable type: pointer to int
